# korder

./: .gitignore  README.md  pyproject.toml  tests.mf
bench-results/: baseline-thinking-off.json  baseline-thinking-on.json  e2b-thinking-off.json  e2b-thinking-on.json  e4b-thinking-off.json  e4b-thinking-on.json  fc-thinking-off.json  fc-thinking-on.json  gemma-capabilities-after.json  gemma-capabilities-before.json
docs/: headphone-recon.md  intent-architecture.md
improvements/: features.md  gemma-capabilities.md  kde-integration.md  ui-design.md  whisper-preprocessing.md
plasma_osd/: test_osd.qml
scripts/: align-osd-screenshots.py  parse-btsnoop.py  probe-ama-cmd100.py  probe-ama-connect.py  probe-ama-handshake.py  probe-ama-scan.py  probe-headphones.sh  probe-hfp-mic.sh  probe-hfp-transcribe.py  setup-uinput.sh
src/korder/: __main__.py  app.py  config.py  inject.py  intent.py  intent_bench.py  kwin.py  kwin_bridge.py  spotify_client.py
src/korder/actions/: __init__.py  _a11y.py  _vision_click.py  audio_output.py  base.py  bluetooth.py  click.py  codes.py  keys.py  launcher.py  media.py  modes.py  now_playing.py  parser.py  playback_target.py  shortcuts.py  spotify.py  system.py  text_chars.py  vision.py  web.py  window.py
src/korder/audio/: _mpris.py  capture.py  chime.opus  chime.py  dsp.py  ducker.py  source_router.py  tts.py  vad.py  wake.py
src/korder/tools/: __init__.py  audio.py  base.py  bluetooth.py  mpris.py  spotify.py  windows.py
src/korder/transcribe/: whisper_engine.py
src/korder/triggers/: _rfcomm.py  ama_button.py  bt_presence.py
src/korder/ui/: _kde_blur.py  benchmark.py  i18n.py  main_window.py  osd.py  progress.py  settings_dialog.py
src/korder/ui/icons/: korder.desktop
src/korder/ui/qml/: osd.qml
tests/: conftest.py  test_audio_output.py  test_bluetooth.py  test_capture.py  test_chime.py  test_click_action.py  test_dsp.py  test_ducker.py  test_inject_backend.py  test_inject_worker_response.py  test_intent_feedback.py  test_intent_integration.py  test_intent_loop.py  test_intent_prompt.py  test_intent_response.py  test_intent_schema.py  test_intent_supplement.py  test_kwin.py  test_kwin_bridge.py  test_launcher.py  test_locked_prefix.py  test_main_window_tts.py  test_main_window_tts_gating.py  test_mpris_pause.py  test_now_playing_action.py  test_parser.py  test_playback_target.py  test_registry.py  test_rfcomm.py  test_segmenter.py  test_settings_dialog.py  test_source_router.py  test_spotify_action.py  test_spotify_client.py  test_spotify_misroute.py  test_tools_catalog.py  test_tools_registry.py  test_tts.py  test_vad_trim.py  test_vision.py  (+5 more)
