[project]
name = "korder"
version = "0.1.0"
description = "Voice-to-text dock for KDE Plasma (Wayland-first)"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "pywhispercpp>=1.3",
    "webrtcvad-wheels>=2.0",
]

[project.scripts]
korder = "korder.app:main"

[project.optional-dependencies]
# Wake-word activation (issue #1). Optional because openwakeword pulls in
# onnxruntime (~150 MB) and a model file at first use; users on the
# hotkey-only path don't need any of it.
wake = [
    "openwakeword>=0.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/korder"]
